--- a/templates/Masterpage.html.twig
+++ b/templates/Masterpage.html.twig
@@ -30,7 +30,7 @@
             <input id="routage" name="routage" type="hidden" value="accueil" />
         {% endif %}
         <div class="row toutelahauteur toutelalargeur margenone padenone">
-            <div class="col-md-2 row text-center padenone margenone " style="border-right:1px solid black;">
+            <div class="col-md-2 row text-center padenone margenone toutelahauteur" style="border-right:1px solid black;">
                 <div class="col-md-12 bg-Grisclair h-25" id="Hautgauche" style="border-bottom:1px solid black;">
                     <div class="mx-auto h-80">
                         {% block nav %}{% endblock %}
