--- a/templates/pages/video.html.twig
+++ b/templates/pages/video.html.twig
@@ -14,9 +14,9 @@
 {% endblock %}
 
 {% block gaucheun %}
-<div class="h-50 justifyparlehautcettefois textbleu col-sm-6 col-md-12">
+<div class="h-50 justifyparlehautcettefois textbleu col-sm-6 col-md-12 hiddendennaruto">
 	<h4>Vidéo de la semaine :</h4>
-	<ul class="justifyparlehautcettefois padenone">
+	<ul class="justifyparlehautcettefois padenone ">
 	{% for video in vodday %}
         <a href="index.php?routage=videoselected&menuderoulant=accueil&videoId={{ video.id }} ">
             <li>{{video.authorname}}</li>
@@ -44,8 +44,8 @@
 
 
 {% block content %}
-        <div class="col-md-10 bg-dark margenone padenone toutelahauteur" style="overflow:hidden">
-            <div id="incrustation" class="col-md-11 h-75  margmid" >
+        <div class="col-md-10 bg-dark margenone padenone toutelahauteur margin6" style="overflow:hidden">
+            <div id="incrustation" class="col-md-11 h-75 incrustation margmid" >
                 <div class="h-10 textbleu">
                 {% for video in urlVideo %}
                     <h2 class="pad1percent">{{video.authorname}} - {{video.name}}</h2>
